pagination & some endpoints added
