# controller/job/search.go
@@ -3,14 +3,14 @@ package job
 import (
 	config "hiringo/config"
 	helper "hiringo/helper"
-	model "hiringo/model"
 	view "hiringo/view"
 	"sort"
+	"strconv"
 
 	"net/http"
 
+	paginator "github.com/dmitryburov/gorm-paginator"
 	"github.com/labstack/echo/v4"
-	"gorm.io/gorm"
 )
 
 // TODO: Somehow lat and long is required fields to calculate distance
@@ -36,7 +36,7 @@ type SeachJobRequest struct {
 // @Accept  json
 // @Produce  json
 // @Param user body SeachJobRequest true "Job related informations"
-// @Success 200 {object} view.Response{payload=[]view.JobView}
+// @Success 200 {object} view.Response{payload=view.JobPaginationView}
 // @Failure 400,401,404,500 {object} view.Response
 // @Failure default {object} view.Response
 // @Router /jobs/search [post]
@@ -44,6 +44,18 @@ type SeachJobRequest struct {
 func SearchJobs(ctx echo.Context) error {
 	db := config.GetDB()
 	req := new(SeachJobRequest)
+	paging := paginator.Paging{}
+	paging.ShowSQL = false
+	paging.Page = 1
+	paging.Limit = 10
+
+	if len(ctx.QueryParam("page")) > 0 && ctx.QueryParam("page") != "" {
+		paging.Page, _ = strconv.Atoi(ctx.QueryParam("page"))
+	}
+
+	if len(ctx.QueryParam("limit")) > 0 && ctx.QueryParam("limit") != "" {
+		paging.Limit, _ = strconv.Atoi(ctx.QueryParam("limit"))
+	}
 
 	/*
 	   |--------------------------------------------------------------------------
@@ -60,82 +72,101 @@ func SearchJobs(ctx echo.Context) error {
 		})
 	}
 
+	jobList := view.JobPagination{}
+
 	// Advanced search jobs
 	// Get db result if request is not empty
-	var jobs []model.Job
-	var result *gorm.DB
+	var err error
 
 	switch {
 	case req.Name != "" && req.Description != "" && req.CategoryID != "" && req.IsEquipmentRequired:
 		//
 		// If all fields are not empty
 		//
-		result = db.Where("name LIKE ?", helper.Format("%{{.}}%", req.Name)).
-			Where("description LIKE ?", helper.Format("%{{.}}%", req.Description)).
-			Where("category_id = ?", req.CategoryID).
-			Where("is_equipment_required = ?", req.IsEquipmentRequired).
-			Find(&jobs)
+		jobList.Pagination, err = paginator.Pages(&paginator.Param{
+			DB: db.Where("name LIKE ?", helper.Format("%{{.}}%", req.Name)).
+				Where("description LIKE ?", helper.Format("%{{.}}%", req.Description)).
+				Where("category_id = ?", req.CategoryID).
+				Where("is_equipment_required = ?", req.IsEquipmentRequired).
+				Where("is_contract_signed != true").
+				Order("latitude desc, longitude desc, is_premium"),
+			Paging: &paging,
+		}, &jobList.Items)
 	case req.Name != "" && req.CategoryID != "" && req.IsEquipmentRequired:
 		//
 		// If name, is_equipment_required and category_id are not
 		//
-		result = db.Where("name LIKE ?", helper.Format("%{{.}}%", req.Name)).
-			Where("category_id = ?", req.CategoryID).
-			Where("is_equipment_required = ?", req.IsEquipmentRequired).
-			Find(&jobs)
+		jobList.Pagination, err = paginator.Pages(&paginator.Param{
+			DB: db.Where("name LIKE ?", helper.Format("%{{.}}%", req.Name)).
+				Where("category_id = ?", req.CategoryID).
+				Where("is_equipment_required = ?", req.IsEquipmentRequired).
+				Where("is_contract_signed != true").
+				Order("latitude desc, longitude desc, is_premium"),
+			Paging: &paging,
+		}, &jobList.Items)
 	case req.Name != "" && req.Description != "" && req.CategoryID != "":
 		//
 		// If name, description and category_id are not empty
 		//
-		result = db.Where("name LIKE ?", helper.Format("%{{.}}%", req.Name)).
-			Where("description LIKE ?", helper.Format("%{{.}}%", req.Description)).
-			Where("category_id = ?", req.CategoryID).
-			Find(&jobs)
+		jobList.Pagination, err = paginator.Pages(&paginator.Param{
+			DB: db.Where("name LIKE ?", helper.Format("%{{.}}%", req.Name)).
+				Where("description LIKE ?", helper.Format("%{{.}}%", req.Description)).
+				Where("category_id = ?", req.CategoryID).
+				Where("is_contract_signed != true").
+				Order("latitude desc, longitude desc, is_premium"),
+			Paging: &paging,
+		}, &jobList.Items)
 	case req.Name != "" && req.CategoryID != "":
 		//
 		// If name and category_id are not empty
 		//
-		result = db.Where("name LIKE ?", helper.Format("%{{.}}%", req.Name)).
-			Where("category_id = ?", req.CategoryID).
-			Find(&jobs)
+		jobList.Pagination, err = paginator.Pages(&paginator.Param{
+			DB: db.Where("name LIKE ?", helper.Format("%{{.}}%", req.Name)).
+				Where("category_id = ?", req.CategoryID).
+				Where("is_contract_signed != true").
+				Order("latitude desc, longitude desc, is_premium"),
+			Paging: &paging,
+		}, &jobList.Items)
 	case req.Name != "" && req.IsEquipmentRequired:
 		//
 		// If name, is_equipment_required and category_id are not
 		//
-		result = db.Where("name LIKE ?", helper.Format("%{{.}}%", req.Name)).
-			Where("is_equipment_required = ?", req.IsEquipmentRequired).
-			Find(&jobs)
+		jobList.Pagination, err = paginator.Pages(&paginator.Param{
+			DB: db.Where("name LIKE ?", helper.Format("%{{.}}%", req.Name)).
+				Where("is_equipment_required = ?", req.IsEquipmentRequired).
+				Where("is_contract_signed != true").
+				Order("latitude desc, longitude desc, is_premium"),
+			Paging: &paging,
+		}, &jobList.Items)
 	case req.Name != "" && req.Description != "":
 		//
 		// If name and description are not empty
 		//
-		result = db.Where("name LIKE ?", helper.Format("%{{.}}%", req.Name)).
-			Where("description LIKE ?", helper.Format("%{{.}}%", req.Description)).
-			Find(&jobs)
+		jobList.Pagination, err = paginator.Pages(&paginator.Param{
+			DB: db.Where("name LIKE ?", helper.Format("%{{.}}%", req.Name)).
+				Where("description LIKE ?", helper.Format("%{{.}}%", req.Description)).
+				Where("is_contract_signed != true").
+				Order("latitude desc, longitude desc, is_premium"),
+			Paging: &paging,
+		}, &jobList.Items)
 	default:
 		//
 		// If name is not empty
 		//
-		result = db.Where("name LIKE ?", helper.Format("%{{.}}%", req.Name)).Find(&jobs)
+		jobList.Pagination, err = paginator.Pages(&paginator.Param{
+			DB: db.Where("name LIKE ?", helper.Format("%{{.}}%", req.Name)).
+				Where("is_contract_signed != true").
+				Order("latitude desc, longitude desc, is_premium"),
+			Paging: &paging,
+		}, &jobList.Items)
 	}
-
-	// TODO: It can be optimized
-	var formatted_jobs []view.JobView
-	for _, job := range jobs {
-		formatted_jobs = append(formatted_jobs, view.JobModelToView(job, req.Latitude, req.Longitude))
-	}
-
-	// sort by distance
-	sort.Slice(formatted_jobs, func(i, j int) bool {
-		return formatted_jobs[i].Distance < formatted_jobs[j].Distance
-	})
 
 	/*
 	   |--------------------------------------------------------------------------
 	   | Main Error
 	   |--------------------------------------------------------------------------
 	*/
-	if result.Error != nil {
+	if err != nil {
 		resp := &view.Response{
 			Success: true,
 			Message: "Internal Server Error",
@@ -147,10 +178,24 @@ func SearchJobs(ctx echo.Context) error {
 		return view.ApiView(http.StatusInternalServerError, ctx, resp)
 	}
 
+	// TODO: It can be optimized
+	var formatted_jobs []view.JobView
+	for _, job := range jobList.Items {
+		formatted_jobs = append(formatted_jobs, view.JobModelToView(job, req.Latitude, req.Longitude))
+	}
+
+	// sort by distance
+	sort.Slice(formatted_jobs, func(i, j int) bool {
+		return formatted_jobs[i].Distance < formatted_jobs[j].Distance
+	})
+
 	resp := &view.Response{
 		Success: true,
 		Message: "Success",
-		Payload: formatted_jobs,
+		Payload: &view.JobPaginationView{
+			Pagination: jobList.Pagination,
+			Items:      formatted_jobs,
+		},
 	}
 
 	// close db
