# docs/swagger.json
@@ -788,6 +788,75 @@
                 }
             }
         },
+        "/jobs/my": {
+            "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "Get Job Detail for authenticated user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "job"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/view.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "payload": {
+                                            "$ref": "#/definitions/view.MyJobView"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/view.Response"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/view.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/view.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/view.Response"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/view.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/jobs/new": {
             "post": {
                 "security": [
@@ -908,10 +977,7 @@
                                     "type": "object",
                                     "properties": {
                                         "payload": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/view.JobView"
-                                            }
+                                            "$ref": "#/definitions/view.JobPaginationView"
                                         }
                                     }
                                 }
@@ -2419,6 +2485,32 @@
                 }
             }
         },
+        "paginator.Pagination": {
+            "type": "object",
+            "properties": {
+                "limit": {
+                    "type": "integer"
+                },
+                "nextPage": {
+                    "type": "integer"
+                },
+                "offset": {
+                    "type": "integer"
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "prevPage": {
+                    "type": "integer"
+                },
+                "totalPage": {
+                    "type": "integer"
+                },
+                "totalRecords": {
+                    "type": "integer"
+                }
+            }
+        },
         "rating.CreateRatingRequest": {
             "type": "object",
             "required": [
@@ -2589,6 +2681,20 @@
                 }
             }
         },
+        "view.JobPaginationView": {
+            "type": "object",
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/view.JobView"
+                    }
+                },
+                "pagination": {
+                    "$ref": "#/definitions/paginator.Pagination"
+                }
+            }
+        },
         "view.JobView": {
             "type": "object",
             "properties": {
@@ -2680,6 +2786,23 @@
                 },
                 "suburb": {
                     "type": "string"
+                }
+            }
+        },
+        "view.MyJobView": {
+            "type": "object",
+            "properties": {
+                "applied": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/view.JobView"
+                    }
+                },
+                "created": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/view.JobView"
+                    }
                 }
             }
         },
